Added a play button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press a Key/Click play button to start</h1>
   <div class="container">
     <div lass="row">
 
@@ -33,7 +33,10 @@
 
     </div>
 
+  </div><br><br>
+  <button class="StButton">Play</button>
   </div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="game.js"></script>
 </body>
